# is-it-stolen

./: .bandit  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CI-CD.md  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.chainguard  ENVIRONMENT-SETUP.md  LICENSE  METRICS.md  Makefile  README.md  SECURITY.md  alembic.ini  codecov.yml  docker-compose.yml  prometheus.yml  pyproject.toml  sonar-project.properties
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml  security.yml
alembic/: env.py
alembic/versions/: 43a7a1a6bd8e_create_stolen_items_table_with_postgis.py  5567fa9e1fc3_initial_database_setup_with_postgis.py
config/: item_categories.yaml
config/flows/: README.md  flows.yaml  handlers.yaml
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  SECURITY-AUDIT.md  SENTRY.md  TROUBLESHOOTING.md  codebase-evaluation-2025-10-09.md  conversation-state-machine.md  is-it-stolen-implementation-guide.md  mutation-testing-guide.md  python-codebase-evaluation-guide.md  test-mocking-evaluation-2025-10-11.md  whatsapp-business-setup.md  whatsapp-interactive-messages-migration.md
grafana/provisioning/dashboards/: dashboard.yml  isitstolen.json
grafana/provisioning/datasources/: datasources.yml
infra/certs/: localhost.conf
src/application/commands/: create_support_ticket.py  delete_item.py  report_stolen_item.py  start_user_session.py  update_item.py  verify_item.py
src/application/queries/: check_if_stolen.py  find_nearby_items.py  list_user_items.py
src/application/services/: export_service.py  notification_service.py
src/domain/: constants.py
src/domain/entities/: stolen_item.py  user_session.py
src/domain/events/: analytics_events.py  domain_events.py
src/domain/exceptions/: domain_exceptions.py
src/domain/repositories/: __init__.py  analytics_repository.py  stolen_item_repository.py
src/domain/services/: conversion_calculation_service.py  matching_service.py  verification_service.py
src/domain/value_objects/: conversion_rate.py  item_attributes.py  item_category.py  location.py  metric_type.py  phone_number.py  police_reference.py  session_id.py  user_segment.py
src/infrastructure/cache/: __init__.py  rate_limiter.py  redis_client.py
src/infrastructure/config/: __init__.py  category_keywords.py  flow_config_loader.py  settings.py
src/infrastructure/geocoding/: __init__.py  geocoding_service.py
src/infrastructure/handlers/: handler_registry.py
src/infrastructure/logging/: __init__.py  context.py  logger.py  logging_config.py  processors.py
src/infrastructure/media/: __init__.py  exceptions.py  storage.py
src/infrastructure/messaging/: __init__.py  event_bus.py
src/infrastructure/metrics/: __init__.py  metrics_service.py
src/infrastructure/monitoring/: __init__.py  sentry.py
src/infrastructure/persistence/: database.py  models.py
src/infrastructure/tracing/: __init__.py  instrumentation.py  tracer.py
src/infrastructure/whatsapp/: __init__.py  client.py  constants.py  exceptions.py  webhook_handler.py
src/presentation/api/: app.py  dependencies.py  middleware.py  prometheus.py
src/presentation/bot/: __init__.py  context.py  error_handler.py  exceptions.py  flow_engine.py  message_parser.py  message_processor.py  message_router.py  messages.py  response_builder.py  state_machine.py  states.py  storage.py
src/presentation/utils/: redaction.py
tests/: conftest.py
tests/e2e/presentation/: test_conversation_flows.py
tests/integration/: test_app_lifecycle.py
tests/integration/application/: test_check_if_stolen_integration.py  test_delete_item_integration.py  test_find_nearby_items_integration.py  test_list_user_items_integration.py  test_notification_service_integration.py  test_report_stolen_item_integration.py  test_update_item_integration.py  test_verify_item_integration.py
tests/integration/domain/: test_domain_integration.py
tests/integration/infrastructure/: test_database.py  test_models.py  test_postgres_stolen_item_repository.py  test_redis_client.py
(+92 files in other folders)
